# QiShengZhaoHuan

./: CMakeLists.txt  README.md  main.c
SDL2-2.26.0-allinone/i686-w64-mingw32/lib/: libSDL2.la  libSDL2_test.la  libSDL2main.la
character/: character.c  character.h  page.c  page.h
include/: ElementalReaction.h  action.h  battle.h  character.h  character_skill.h  page.h  record.h  summon.h
src/: ElementalReaction.c  action.c  battle.c  character.c  character_skill.c  page.c  record.c  summon.c
